# deliceos

./: .gitignore  LICENSE  README.md
bootloader/delice_pxe/: linker.ld  meson.build  pxe_loader.c  test.c
bootloader/delice_pxe/includes/: apic.h  atomic.h  paging.h  perfctr.h  printf.h  screen.h  serial.h  stdlib.h  types.h
bootloader/delice_pxe/includes/misc/: .cpu.h.swo  cpu.h  cpuid.h  init.h  io.h
bootloader/delice_pxe/src/: apic.cc  atomic.cc  cpu.cc  cpuid.cc  init.cc  interrupt.cc  interrupt.s  paging.cc  perfctr.cc  printf.cc  screen.cc  serial.cc  stdlib.cc
bootloader/firststage/: bootloader.s  meson.build
elf_parse/: Makefile  parse_elf
elf_parse/include/: file.h  parser.h
elf_parse/src/: parser.cc
elf_parse/src/Utils/: file.cc
memlib/: memcpy.cc
